--- a/public/registro.html
+++ b/public/registro.html
@@ -28,16 +28,16 @@
                               <li><a class="dropdown-item" href="#">Gatito</a></li>
                             </ul>
                           </div>    <br><br>
-                          <input type="email" class="form-control" id="raza" aria-describedby="emailHelp" placeholder="Raza de la mascota">
+                          <input type="text" class="form-control" id="raza" aria-describedby="emailHelp" placeholder="Raza de la mascota">
                         <br>
-                        <input type="email" class="form-control" id="nombre" aria-describedby="emailHelp" placeholder="Nombre del cliente">
+                        <input type="text" class="form-control" id="nombre" aria-describedby="emailHelp" placeholder="Nombre del cliente">
                         <br>
-                        <input type="email" class="form-control" id="telefono" aria-describedby="emailHelp" placeholder="Teléfono">
+                        <input type="text" class="form-control" id="telefono" aria-describedby="emailHelp" placeholder="Teléfono">
                         <br>
                           <br>
                         <div class="container-fluid">
                             <button type="button" class="btn btn-danger"><a href="index.html" style="color:white;"> <i class="fas fa-window-close"></i> Cancelar</a></button>    
-                            <button type="button" class="btn btn-primary">Guadar registro <i class="fas fa-paw"></i></button>
+                            <button type="button" class="btn btn-primary" onclick="enviar_formulario()">Guadar registro <i class="fas fa-paw"></i></button>
                         </div>
                         <br>
                     </div>
@@ -45,8 +45,9 @@
             </div>
         </div>
     </div>
-   
-
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="formulario.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="text/javascript" src="public/bundle.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
