--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
               </li>
             </ul>
             <form class="d-flex">
-              <button class="btn btn-warning my-2 my-sm-0" type="submit"><a href="registro.html"><i class="fas fa-dog"></i> Registro</a></button>
+              <a class="button-registrar" href="registro.html"><i class="fas fa-dog"></i> Registro</a>
             </form>
           </div>
         </div>
