--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="../assets/css/bootstrapm.min.css" />
-    <link rel="stylesheet" href="../assets/css/index.css" />
+    <link rel="stylesheet" href="assets/css/bootstrapm.min.css">
+    <link rel="stylesheet" href="assets/css/index.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-          <img src="../assets/image/logo1.png"  alt="" style="width: 80px; height: 80px;"/>  
+          <img src="assets/image/logo1.png"  alt="" style="width: 80px; height: 80px;"/>  
           
           <div class="collapse navbar-collapse " id="navbarColor01">
             <a class="navbar-brand" href="#" style="font-size: 22px;">Perritos A.C. </a>
@@ -50,21 +50,21 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../assets/image/4.png" class="d-block w-100" alt="..." style="border: 6px solid; color: dodgerblue;">
+                <img src="assets/image/4.png" class="d-block w-100" alt="..." style="border: 6px solid; color: dodgerblue;">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>PISCINA</h5>
                   <p>¡Para que tu mejor amigo se refresque un poco!</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../assets/image/guar.jpg" class="d-block w-100" alt="..."  style="border: 6px solid; color: gold;">
+                <img src="assets/image/guar.jpg" class="d-block w-100" alt="..."  style="border: 6px solid; color: gold;">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>ALBERCA DE PELOTAS</h5>
                   <p>Para una mayor diversión!</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../assets/image/ofi.jpg" class="d-block w-100" alt="..."  style="border: 6px solid; color: greenyellow;">
+                <img src="assets/image/ofi.jpg" class="d-block w-100" alt="..."  style="border: 6px solid; color: greenyellow;">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>AREA RECREATIVA</h5>
                   <p>Donde tu mascota podrá correr y jugar mucho!</p>
@@ -92,7 +92,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4" style="height: 90vh;">
           <div class="col">
             <div class="card">
-              <img src="../assets/image/cd1.png" class="card-img-top " alt="...">
+              <img src="assets/image/cd1.png" class="card-img-top " alt="...">
               <div class="card-body">
                 <h5 class="card-title"><i class="fas fa-dollar-sign"></i> 50.00</h5>
                 <p class="card-text">Incluye: Habitación (tamaño elegido), comida y agua.</p>
@@ -101,7 +101,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="../assets/image/cd2.png" class="card-img-top" alt="...">
+              <img src="assets/image/cd2.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title"><i class="fas fa-dollar-sign"></i> 100.00</h5>
                 <p class="card-text">Incluye: Habitación (tamaño elegido), comida, agua y alfombra.</p>
@@ -110,7 +110,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="../assets/image/cd3.png" class="card-img-top" alt="...">
+              <img src="assets/image/cd3.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title"><i class="fas fa-dollar-sign"></i> 150.00</h5>
                 <p class="card-text">Incluye: Habitación (tamaño elegido), comida, agua, alfombra, cama y jueguetes.  </p>
