--- a/public/registro.html
+++ b/public/registro.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../assets/css/registro.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/registro.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -14,7 +14,7 @@
         <div class="col-sm-12 main-section">
             <div class="modal-content">
                 <div class="col-12 user-img">
-                    <img src="../assets/image/perrito.png"  alt=""/>
+                    <img src="assets/image/perrito.png"  alt=""/>
                 <h2>Formulario de Registro <i class="far fa-calendar-check"></i></h2>
                 </div>
                 <form class="col-12 " >
